RESOLVED FIXED275560
[view-transitions] Always invalidate geometry in `RenderObject::setCapturedInViewTransition`
https://bugs.webkit.org/show_bug.cgi?id=275560
Summary [view-transitions] Always invalidate geometry in `RenderObject::setCapturedIn...
Tim Nguyen (:ntim)
Reported 2024-06-17 00:40:12 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-17 00:40:34 PDT
Tim Nguyen (:ntim)
Comment 2 2024-06-17 00:46:00 PDT
EWS
Comment 3 2024-06-17 07:20:14 PDT
Committed 280067@main (0b2532e6caba): <https://commits.webkit.org/280067@main> Reviewed commits have been landed. Closing PR #29890 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.