[view-transitions] Always invalidate geometry in `RenderObject::setCapturedInViewTransition` https://bugs.webkit.org/show_bug.cgi?id=275560 rdar://129981804

Reviewed by Matt Woodrow.

`RenderLayerBacking::updateTransform` and `RenderLayerBacking::updateGeometry` both have changes based on `renderer().effectiveCapturedInViewTransition()`.

Probably safer and more consistent to invalidate in all cases, not just in the RenderView one.

* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::RenderObject::setCapturedInViewTransition):

Canonical link: https://commits.webkit.org/280067@main